--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
   "author": "kongasa",
   "license": "GPLv3.0",
   "devDependencies": {
-    "electron": "^18.2.3"
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "electron": "^18.2.3",
+    "eslint": "^8.15.0",
+    "prettier": "^2.6.2",
+    "prettier-eslint": "^15.0.0"
   },
   "scripts": {
-    "start":"electron ."
+    "start": "electron ."
   }
 }
