--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
   "author": "kongasa",
   "license": "GPLv3.0",
   "devDependencies": {
+    "@types/node": "^17.0.34",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "electron": "^18.2.3",
     "eslint": "^8.15.0",
     "prettier": "^2.6.2",
-    "prettier-eslint": "^15.0.0"
+    "prettier-eslint": "^15.0.0",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   },
   "scripts": {
-    "start": "electron ."
+    "build": "tsc",
+    "copyhtml": "node ./script/copyhtml.js",
+    "start": "yarn build && yarn copyhtml && electron ./dist"
   }
 }
