--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "repository": "https://github.com/kongasa/rohana.git",
   "author": "kongasa",
-  "license": "GPLv3.0",
+  "license": "GPL-3.0",
   "devDependencies": {
     "@types/node": "^17.0.34",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "electron": "^18.2.3",
     "eslint": "^8.15.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
     "prettier-eslint": "^15.0.0",
     "ts-node": "^10.7.0",
