--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@typescript-eslint/parser": "^5.25.0",
     "electron": "^18.2.3",
     "eslint": "^8.15.0",
+    "eslint-plugin-html": "^6.2.0",
     "husky": "^8.0.1",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
