--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     },
     "lib": ["esnext", "dom", "dom.iterable", "webworker", "scripthost"]
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts","src/**/*.d.ts"],
   "exclude": ["node_modules", "**/node_modules/*"]
 }
